<resources>
    <string name="app_name">Covid-19 Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_update">Latest Update</string>
    <string name="daily_report">Daily Report</string>
    <string name="country_report">Country Report</string>
    <string name="total_cases">Total Cases</string>
    <string name="critical">Critical</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="set_date">Set Date</string>
    <string name="_0">0</string>
    <string name="about">About</string>
    <string name="app_description">This Android App shows the total Covid-19 cases recorded all over the world. Also updates the latest figures of Covid-19 cases. Users can search daily reports of any country on any date.</string>
    <string name="api_url" translatable="false"><b>API URL:</b>\n https://rapidapi.com/Gramzivi/api/covid-19-data/details</string>
    <string name="app_developer_areeb_momin"><b>App Developer:</b> <i>Areeb Momin</i></string>
    <string name="github_link" translatable="false"><b>Github:</b>\n https://github.com/areebmomin/Covid-19-Update-Android-App</string>
    <string name="youtube_link" translatable="false"><b>Youtube:</b>\n https://youtube.com/playlist?list=PLbywpVBpksma8EaB0Bh7qnHmqp420Av_d</string>
    <string name="free_project_link" translatable="false"><b>Free Projects:</b>\n https://www.kashipara.com/profile/user/areeb_momin</string>
    <string name="linked_in_link" translatable="false"><b>LinkedIn:</b>\n https://www.linkedin.com/in/areeb-momin/</string>
    <string name="code_lab_link" translatable="false"><b>Google Code Lab:</b> https://bit.ly/2NXvOZm</string>
</resources>